force-app/main/default/objects/UWMBranch__c/UWMBranch__c.object-meta.xml
<CustomObject>
    <label>UWM Branch</label>
    <nameField>
        <label>UWMBranch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UWM Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>